projects/flask-k8s-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-k8s-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-k8s-demo

  template:
    metadata:
      labels:
        app: flask-k8s-demo

    spec:
      containers:
        - name: flask-k8s-demo
          image: flask-k8s-demo:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
