projects/flask-k8s-demo/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: flask-k8s-service

spec:
  selector:
    app: flask-k8s-demo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
