projects/flask-k8s-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flask-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: flask.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: flask-k8s-service
                port:
                  number: 80
